# file-uploader

./: Cargo.toml  README.md  conf.ini
src/: form_data.rs  main.rs
templates/: index.html
