[package]
name = "file-uploader"
version = "0.1.0"
authors = ["Jia Ye <planet0104@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.9"
actix-multipart = "0.1.4"
env_logger = "0.7.1"
futures = "0.1.25"
rust-ini = "0.13.0"
mime = "0.3.14"
tera = "0.11.20"
lazy_static = "1.4.0"